# easyinstaller

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: solicitar_recurso.md
.github/workflows/: release.yml
cli/: flatpak.py  remove.py
docs/man/: ei.1
models/: app.json
myapp/: setup.json
scripts/: compile_translations.sh  instalador.sh  install.sh  uninstall.sh
src/easyinstaller/: VERSION  main.py
src/easyinstaller/cli/: add.py  apt.py  changelog.py  completion.py  config.py  export.py  favorites.py  flatpak.py  hist.py  import_app.py  license.py  list.py  remove.py  snap.py  uninstall.py  update.py
src/easyinstaller/cli/utils/: ask.py
src/easyinstaller/core/: config.py  distro_detector.py  favorites.py  history_handler.py  lister.py  package_filters.py  package_handler.py  runner.py  searcher.py  versioning.py
src/easyinstaller/i18n/: i18n.py
src/easyinstaller/locales/: easyinstaller.po
src/easyinstaller/locales/en_US/LC_MESSAGES/: easyinstaller.mo  easyinstaller.po
src/easyinstaller/locales/pt_BR/LC_MESSAGES/: easyinstaller.mo  easyinstaller.po
src/easyinstaller/styles/: styles.py
src/easyinstaller/utils/: cli.py  update_prompt.py
tests/: conftest.py  test_cli_remove.py  test_config.py  test_distro_detector.py  test_lister.py  test_package_handler.py  test_runner.py
