[project]
name = "easyinstaller"
version = "0.1.15.3"
description = "A universal installation manager for Linux."
authors = [{ name = "Luiz Gustavo", email = "luizgcesar@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "typer[all] (>=0.19.2,<0.20.0)",
    "rich (>=14.2.0,<15.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "questionary (>=2.1.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pexpect (>=4.9.0,<5.0.0)",
    "nuitka (>=2.8.3,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
]

[tool.poetry]
packages = [{ include = "easyinstaller", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ei = "easyinstaller.main:app"
format = "easyinstaller.utils.cli:format"
lint = "easyinstaller.utils.cli:lint"
